--- a/app/views/public/pages/filtres/_filtres_taille.html.erb
+++ b/app/views/public/pages/filtres/_filtres_taille.html.erb
@@ -22,7 +22,8 @@
                     couleur: params[:couleur],
                     prixmax: params[:prixmax],
                     type: params[:type],
-                    from_cabine: params[:from_cabine]
+                    from_cabine: params[:from_cabine],
+                    type_produit: params[:type_produit]
                 ),
                 class: "dropdown-item #{'fw-bold' if params[:taille].blank?}" %>
             </li>
@@ -37,7 +38,8 @@
                     couleur: params[:couleur],
                     prixmax: params[:prixmax],
                     type: params[:type],
-                    from_cabine: params[:from_cabine]
+                    from_cabine: params[:from_cabine],
+                    type_produit: params[:type_produit]
                     ),
                     class: "dropdown-item #{'fw-bold' if params[:taille].to_s == taille.id.to_s}" %>
             </li>
