--- a/app/views/public/pages/filtres/_filtres_type.html.erb
+++ b/app/views/public/pages/filtres/_filtres_type.html.erb
@@ -4,7 +4,7 @@
         <button class="btn btn-sm btn-outline-light dropdown-toggle" type="button" id="typeDropdown" data-bs-toggle="dropdown" aria-expanded="false">
             <i class="bi bi-tags"></i>
             <span class="ms-1 d-none d-md-inline">
-            <%= params[:type].present? ? params[:type].capitalize : "Type" %>
+            <%= params[:type].present? ? params[:type].capitalize : "Service" %>
             </span>
         </button>
 
@@ -18,7 +18,8 @@
                     couleur: params[:couleur],
                     prixmax: params[:prixmax],
                     type: nil,
-                    from_cabine: params[:from_cabine]
+                    from_cabine: params[:from_cabine],
+                    type_produit: params[:type_produit]
                 ),
                 class: "dropdown-item #{'fw-bold' if params[:type].blank?}" %>
             </li>
@@ -33,7 +34,8 @@
                     couleur: params[:couleur],
                     prixmax: params[:prixmax],
                     type: type,
-                    from_cabine: params[:from_cabine]
+                    from_cabine: params[:from_cabine],
+                    type_produit: params[:type_produit]
                     ),
                     class: "dropdown-item #{'fw-bold' if params[:type].to_s == type.to_s}" %>
             </li>
