--- a/app/views/public/pages/le_concept.html.erb
+++ b/app/views/public/pages/le_concept.html.erb
@@ -59,7 +59,14 @@
         ) %>
       </div>
     </div>
+  </div>
+</div>
 
+<!-- Section texte sticky -->
+<%= render partial: "public/pages/le_concept/section_sticky_text" %>
+
+<div class="public-main-content">
+  <div class="container-fluid">
     <!-- Comment ça marche -->
     <div class="my-5 py-5 rounded-4" style="background: linear-gradient(135deg, #2c2c2c 0%, #393939 50%, #2c2c2c 100%);" data-scroll-reveal>
       <div class="container">
