adding images styling navbar and scrollbar

--- a/app/views/public/pages/le_concept.html.erb
+++ b/app/views/public/pages/le_concept.html.erb
@@ -1,4 +1,6 @@
-<%= page_header("Le concept", "Découvrez notre concept unique de location de tenues") %>
+<%= page_header("Le concept", "Découvrez notre concept unique de location de tenues", 
+image1: "https://images.pexels.com/photos/1300550/pexels-photo-1300550.jpeg", 
+image2: "https://images.pexels.com/photos/2122361/pexels-photo-2122361.jpeg") %>
 
 <div class="public-main-content">
   <div class="container-fluid">
