--- a/app/views/public/pages/nos_autres_activites.html.erb
+++ b/app/views/public/pages/nos_autres_activites.html.erb
@@ -1,4 +1,10 @@
-<%= page_header("Nos autres activités", "Explorez l'ensemble de nos services") %>
+<%= page_header(
+  "Nos autres activités", 
+  "Explorez l'ensemble de nos services",
+  image1: "https://images.pexels.com/photos/707377/pexels-photo-707377.jpeg",
+  image2: "https://images.pexels.com/photos/356170/pexels-photo-356170.jpeg"
+) %>
+
 
 <div class="public-main-content">
   <div class="container-fluid">
