--- a/app/views/public/pages/nos_collections.html.erb
+++ b/app/views/public/pages/nos_collections.html.erb
@@ -1,4 +1,9 @@
-<%= page_header("Nos collections", "Découvrez notre sélection de tenues d'exception") %>
+<%= page_header(
+  "Nos collections", 
+  "Découvrez notre sélection de tenues d'exception",
+  image1: "https://images.pexels.com/photos/3775262/pexels-photo-3775262.jpeg",
+  image2: "https://images.pexels.com/photos/14339119/pexels-photo-14339119.jpeg"
+) %>
 
 <div class="public-main-content">
   <div class="container-fluid p-0">
