--- a/app/views/public/pages/_home_nav_cards.html.erb
+++ b/app/views/public/pages/_home_nav_cards.html.erb
@@ -8,7 +8,7 @@
       { icon: 'lightbulb-fill', title: 'Le concept', description: 'Notre philosophie', url: le_concept_path, image: 'cat_costume.jpg' },
       { icon: 'stars', title: 'Nos autres activités', description: 'Costumes d\'époque & prestations', url: nos_autres_activites_path, image: 'cat_accessoires.jpg' },
       { icon: 'shield-check', title: 'Légal', description: 'Mentions & CGV', url: legal_path, image: 'party.jpg' },
-      { icon: 'question-circle-fill', title: 'FAQ', description: 'Questions fréquentes', url: faq_path, image: 'frais_expedition.jpg' }
+      { icon: 'question-circle-fill', title: 'FAQ', description: 'Questions fréquentes', url: faq_path, image: 'cat_tenues_soiree.jpg' }
     ]
     %>
     
