--- a/app/views/public/pages/cabine_essayage.html.erb
+++ b/app/views/public/pages/cabine_essayage.html.erb
@@ -1,4 +1,6 @@
-<%= page_header("Cabine d'essayage", "Sélectionner vos produits et venez les essayer en boutique") %>
+<%= page_header("Cabine d'essayage", "Sélectionner vos produits et venez les essayer en boutique",
+image1: "https://images.pexels.com/photos/6494099/pexels-photo-6494099.jpeg",
+image2: "https://images.pexels.com/photos/7304211/pexels-photo-7304211.jpeg") %>
 
 <div class="public-main-content">
   <div class="container-fluid">
