--- a/app/views/public/pages/faq.html.erb
+++ b/app/views/public/pages/faq.html.erb
@@ -1,4 +1,6 @@
-<%= page_header("FAQ", "Questions fréquemment posées") %>
+<%= page_header("FAQ", "Questions fréquemment posées",
+image1: "https://images.pexels.com/photos/21717506/pexels-photo-21717506.jpeg",
+image2: "https://images.pexels.com/photos/22678539/pexels-photo-22678539.jpeg") %>
 
 <div class="public-main-content">
   <div class="container-fluid">
