--- a/app/views/public/pages/legal.html.erb
+++ b/app/views/public/pages/legal.html.erb
@@ -1,4 +1,6 @@
-<%= page_header("Légal", "Mentions légales et conditions générales") %>
+<%= page_header("Légal", "Mentions légales et conditions générales",
+image1: "https://images.pexels.com/photos/26238484/pexels-photo-26238484.jpeg",
+image2: "https://images.pexels.com/photos/23500968/pexels-photo-23500968.jpeg") %>
 
 <div class="public-main-content">
   <div class="container-fluid">
