--- a/app/views/public/shared/_navbar.html.erb
+++ b/app/views/public/shared/_navbar.html.erb
@@ -1,21 +1,20 @@
-
-<nav class="navbar navbar-expand-xxl navbar-dark shadow-sm sticky-top">
-  <div class="container align-items-center justify-content-between">
+<nav class="navbar navbar-expand-xxl bg-black shadow-sm sticky-top py-3">
+  <div class="container-fluid ps-2 pe-3 align-items-center justify-content-between">
     <div class="d-flex align-items-center gap-2">
-      <%= link_to image_tag('/images/a1soir_logo_white.png', class: 'navbar-brand mb-0', width: "250", alt: "Logo"), root_url %>
+      <%= link_to image_tag('/images/a1soirlogo2.png', class: 'mb-0 px-2', width: "350", alt: "Logo"), root_url %>
 
       <%= link_to rdv_url(subdomain: "shop"),
-          class: "btn btn-sm btn-smoke-hover text-light px-2 shadow d-inline-flex align-items-center hover-lift" do %>
+          class: "btn btn-sm btn-light px-3 ms-4 me-2 d-inline-flex align-items-center btn-rdv-hover public-btn-border-radius" do %>
         <i class="bi bi-calendar-check me-2"></i>
-        <span class="fw-bold text-uppercase small">RDV</span>
+        <span class="fw-bold text-uppercase small">Prendre rendez-vous</span>
       <% end %>
     </div>
 
     <div class="d-flex align-items-center gap-3 order-xl-2 ms-auto">
       <%= render partial: "public/shared/cart_nav_link" %>
 
-      <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+      <button class="navbar-toggler border-0 p-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+        <i class="bi bi-list text-light" style="font-size: 1.75rem;"></i>
       </button>
     </div>
 
