--- a/app/views/public/pages/nos_collections.html.erb
+++ b/app/views/public/pages/nos_collections.html.erb
@@ -7,44 +7,6 @@
 
 <div class="public-main-content">
   <div class="container-fluid p-0">
-    <div class="row g-0">
-      
-      <div class="col-12 col-md-6 col-lg-3" data-scroll-reveal>
-        <%= collection_card(
-          title: "Robes de mariée",
-          items: ["Courtes", "Longues"],
-          url: produits_filter_url(category_names: ["robes de mariée courtes", "robes de mariée longues"]),
-          image: "cat_robes_mariees.jpg"
-        ) %>
-      </div>
-
-      <div class="col-12 col-md-6 col-lg-3" data-scroll-reveal>
-        <%= collection_card(
-          title: "Tenues de Soirée",
-          items: ["Longues", "Courtes", "Ensembles pantalon", "Combinaisons"],
-          url: produits_filter_url(category_names: ["robes courtes", "robes longues", "ensembles pantalons"]),
-          image: "cat_tenues_soiree.jpg"
-        ) %>
-      </div>
-
-      <div class="col-12 col-md-6 col-lg-3" data-scroll-reveal>
-        <%= collection_card(
-          title: "Costumes",
-          items: ["Smokings", "Cérémonies", "Enfant"],
-          url: produits_filter_url(category_names: "costume"),
-          image: "cat_costume.jpg"
-        ) %>
-      </div>
-
-      <div class="col-12 col-md-6 col-lg-3" data-scroll-reveal>
-        <%= collection_card(
-          title: "Accessoires",
-          items: ["Chaussures Homme", "Chaussures Femmes", "Accessoires Hommes", "Accessoires Femmes"],
-          url: produits_filter_url(category_names: ["chaussures", "accessoires"]),
-          image: "cat_accessoires.jpg"
-        ) %>
-      </div>
-
-    </div>
+    <%= render partial: "public/shared/section_categories" %>
   </div>
 </div>
