--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -38,7 +38,7 @@
 
     <div class="m-0 p-0 public-content">
       <div id="flash" data-turbo-temporary>
-        <%= render partial: "public/pages/flash" %>
+        <%= render partial: "public/shared/flash" %>
       </div>
       <%= yield %>
     </div>
