--- a/app/views/public/pages/home.html.erb
+++ b/app/views/public/pages/home.html.erb
@@ -16,7 +16,7 @@
     <%= render 'public/pages/home/discover_section' %>
 
     <!-- Cartes de navigation -->
-    <%= render 'home_nav_cards' %>
+    <%= render 'public/pages/home/home_nav_cards' %>
   </div>
 </div>
 
