--- a/app/views/public/pages/produits.turbo_stream.erb
+++ b/app/views/public/pages/produits.turbo_stream.erb
@@ -1,7 +1,7 @@
 <%# produits infinite scroll pagination %>
 
 <%= turbo_stream.append :produits do %>
-    <%= render partial: "public/pages/produit", 
+    <%= render partial: "public/pages/produit/produit", 
             collection: @produits %>
 <% end %>
 
