--- a/app/views/public/pages/produit/_produit.html.erb
+++ b/app/views/public/pages/produit/_produit.html.erb
@@ -34,7 +34,7 @@
               
               <%= link_to produit_path(slug: produit.nom.parameterize, id: produit.id), class: "text-decoration-none", data: { turbo: false } do %>
                   <%#= image_tag(produit.default_image, class: "card-img-top", style: "max-height: 300px; object-fit: cover;") %>
-                  <%= render partial: "carousel", locals: { produit: produit, carousel_class: "card-img-top carousel-multiple" } %>
+                  <%= render partial: "public/pages/produit/carousel", locals: { produit: produit, carousel_class: "card-img-top carousel-multiple" } %>
               <% end %>
 
               <div class="card-body">
