--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -14,7 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js/dist/chart.umd.min.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" async >
 
-    <%= favicon_link_tag asset_path('favicon.webp'), :rel => 'icon', :type =>  'image/png' %>
+    <%= favicon_link_tag asset_path('a1soir_favicon.png'), :rel => 'icon', :type =>  'image/png' %>
 
     <%= render "admin/shared/gtag" %>
 
