--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -20,7 +20,7 @@
 
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" async >
 
-    <%= favicon_link_tag asset_path('favicon.webp'), :rel => 'icon', :type =>  'image/png' %>
+    <%= favicon_link_tag asset_path('a1soir_favicon.png'), :rel => 'icon', :type =>  'image/png' %>
 
     <%= render "admin/shared/gtag" %>
 
